--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -36,6 +36,16 @@ nav ul {
  align-content: center;
 }
 
+.overlayer {
+    background-color: rgba(248, 247, 216, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 .header-back {
     background-image: url(img/slider-1.jpg);
     background-size: cover;
@@ -57,10 +67,10 @@ button {
     font-size: 20px;
     color: white;
     background: transparent;
-    width: 125px;
+    width: 130px;
     height: 60px;
     border: 2px solid white;
-    padding: 15px;
+    padding: 10px;
     font-weight: 600;
 }
 
